--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
       
     >
       <p class="markdownify">
-  I studied Computer Science related subjects like <font color=brown>rogramming, algorithm, and machine learning</font> for about 7 years. I am very familiar with <font color=brown>R, Python, sklearn and Keras.</font>
+  I studied Computer Science related subjects like <font color=brown>programming, algorithm, and machine learning</font> for about 7 years. I am very familiar with <font color=brown>R, Python, sklearn and Keras.</font>
   
   <br />
   <br />
   I am mostly interested in:
   <br />
-  <font color=cc6699>Data Science</font>
+  <font color=cc6699>Real-world human-robot interaction</font>
   <br />
   <font color=cc6699>Machine Learning</font>
   <br />
@@ -157,7 +157,7 @@
   <font color=cc6699>Computational Social Science</font>
   <br />
   <br />
-  My <strong>current research</strong> is about game theory to optimize the prediction model based on the incentive system for agents, which has high relative with human-computer interaction. I use different kinds of incentive mechanism, which starting from the area in <font color=brown>social networking and market economics</font> to reward agents to choose high-quality factors and induce collective intelligence for the high prediction accuracy. For example, it can be applied to economic market or the prediction of presidential selection.
+  My <strong>current research</strong> is about game theory to optimize the prediction model based on the incentive system for agents, which has high relative with human-computer interaction. I use different kinds of incentive mechanism, which starting from the area in <font color=brown>social networking and market economics</font> to reward agents to choose high-quality factors and induce collective intelligence for the high prediction accuracy. For example, it can be applied to decision making area.
 
   
   <br />
@@ -246,7 +246,7 @@
 </dl>
 
 <dl>
-  <dt><strong>B.S. in Information and Communication Enginnering</strong></dt>
+  <dt><strong>B.S. in Internet of Things</strong></dt>
   <dd class="mb-0 ml-3"><strong>Sep. 2012 - Jun. 2016</strong> &middot; 
     <a href="https://en.uestc.edu.cn/" >
       University Of Electronic Science And Technology Of China (UESTC)
@@ -277,7 +277,7 @@
     <a  style="color: blue; font-size: 18ps;">Improving the accuracy of collective prediction by maintaining the diversity of opinions</a>
   
   </dt>
-  <dd class="mb-0 ml-3 markdownify"><strong><font color=cc9999>Background:</font></strong> Decisions made by a single individual tend to be inaccurate compared to decisionsmade by majority. Collective intelligence is a process of sharing or group intelligence, and assembling opinions from others into decision-making<br /><strong><font color=cc9999>Add Incentive:</font></strong> Based on previous research to give incentive for agents and induce collective intelligence, in order to improve the prediction accuracy.<br /><strong><font color=cc9999>Evaluation:</font></strong> Different incentives can be used to dynamically improve the prediction accuracy with different number of agents participate in.</dd>
+  <dd class="mb-0 ml-3 markdownify"><strong><font color=cc9999>Background:</font></strong> Decisions made by a single individual tend to be inaccurate compared to decisions made by majority. Collective intelligence is a process of sharing or group intelligence, and assembling opinions from others into decision-making<br /><strong><font color=cc9999>Add Incentive:</font></strong> Based on previous research to give incentive for agents and induce collective intelligence, in order to improve the prediction accuracy.<br /><strong><font color=cc9999>Evaluation:</font></strong> Different incentives can be used to dynamically improve the prediction accuracy with different number of agents participate in.</dd>
   
   
   <dt>
@@ -366,7 +366,7 @@ Annual Conference of Japanese Society and Artificual Intelligence (JSAI).
   <div id="skill-percent" class="85%" style="width: 0;"></div>
 </div>
 
-<code>Average (English, Mandarin, Japanese)</code>
+<code>Average (English, Mandarin, A little French & Japanese)</code>
 <div class="w-100 skillbar mt-1 mb-3">
   <div id="skill-percent" class="80%" style="width: 0;"></div>
 </div>
