--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <br />
   <font color=cc6699>Social and Information Network Analysis</font>
   <br />
-  <font color=cc6699>Computational Social Science</font>
+  <font color=cc6699>human-robot interaction</font>
   <br />
   <br />
   My <strong>current research</strong> is about <font color=brown>game theory</font> to optimize the prediction model based on the incentive system for agents, which has high relative with human-computer interaction. I use different kinds of incentive mechanism, which starting from the area in <font color=brown>social networking and market economics</font> to reward agents to choose high-quality factors and induce collective intelligence for the high prediction accuracy. For example, it can be applied to decision making area.
